--- a/style/style.css
+++ b/style/style.css
@@ -1,54 +1,63 @@
 :root {
   --primary-color: #ffffff;
   /* text*/
-  --secondary-color: #E8E9FF;
+  --secondary-color: #e8e9ff;
   /* daytime light*/
-  --tertiary-color: #8589FF;
+  --tertiary-color: #8589ff;
   /* daytime Dark*/
   --quaternary-color: #757aff;
   /* Button */
-  --quinary-color: #6264A2;
+  --quinary-color: #6264a2;
   /* night light*/
   --senary-color: #222350;
   /* night dark*/
   --septenary-color: #000000;
   /* */
-  --primary-font: 'Roboto', sans-serif;
-  --secondary-font: 'Open Sans', sans-serif;
+  --primary-font: "Roboto", sans-serif;
+  --secondary-font: "Open Sans", sans-serif;
 }
 
 body {
   font-family: var(--primary-font);
-  background: linear-gradient(45deg, rgba(133, 137, 255, 1) 50%, rgba(232, 233, 255, 1) 100%);
+  background: linear-gradient(
+    45deg,
+    rgba(133, 137, 255, 1) 50%,
+    rgba(232, 233, 255, 1) 100%
+  );
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: var(--primary-color);
   margin: 0;
   max-width: 100vw;
-
 }
 
 .night {
   font-family: var(--primary-font);
-  background: linear-gradient(45deg, rgba(34, 35, 80, 1) 50%, rgba(98, 100, 163, 1)100%);
+  background: linear-gradient(
+    45deg,
+    rgba(34, 35, 80, 1) 50%,
+    rgba(98, 100, 163, 1) 100%
+  );
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: var(--primary-color);
   margin: 0;
-
 }
 
 body .overcast {
   font-family: var(--primary-font);
-  background: linear-gradient(110deg, rgba(98, 100, 162, 1) 50%, rgba(232, 233, 255, 1) 100%);
+  background: linear-gradient(
+    110deg,
+    rgba(98, 100, 162, 1) 50%,
+    rgba(232, 233, 255, 1) 100%
+  );
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: var(--primary-color);
   margin: 0;
-
 }
 
 h1 {
@@ -57,8 +66,6 @@ h1 {
   margin: 0;
   justify-self: start;
   width: 80vmax;
-
-
 }
 
 h2 {
@@ -68,18 +75,15 @@ h2 {
 }
 
 h3 {
-  font: .3rem;
+  font: 0.3rem;
   font-weight: 100;
   margin: 0;
-
 }
-
 
 .top-forecast {
   display: flex;
   flex-direction: column;
-  row-gap: .5em;
-
+  row-gap: 0.5em;
 }
 
 .forecast {
@@ -109,11 +113,9 @@ h3 {
   justify-content: end;
 }
 
-#forecast-icon>img {
-
-  transform: scale(75%)
+#forecast-icon > img {
+  transform: scale(75%);
 }
-
 
 #toggle-Btn {
   border-radius: 75% 75%;
@@ -150,3 +152,4 @@ li {
   padding: 0;
   margin: 0;
 }
+/* hej */
