--- a/style/style.css
+++ b/style/style.css
@@ -101,6 +101,7 @@ h3 {
   align-items: start;
   justify-self: center;
   align-content: space-between;
+  height: 50dvh;
 }
 
 #forecast-icon {
@@ -119,34 +120,55 @@ h3 {
   border-radius: 75% 75%;
 }
 
-ul {
-  row-gap: 0;
-  padding-inline-start: 0;
-}
-
 #weekly-forecast {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   color: var(--septenary-color);
   background-color: var(--primary-color);
-  height: 50vh;
+  height: 50dvh;
   width: 100vw;
   text-decoration: none;
   box-sizing: border-box;
   padding: 1rem;
 }
 
-li img {
-  transform: scale(50%);
-  align-self: end;
+ul {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 li {
-  border: solid 2px red;
   display: flex;
   flex-direction: row;
-  text-align: start;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 0;
-  margin: 0;
+  width: 100%;
+  flex-grow: 1;
+  padding: 0 1rem;
+  height: 25%;
+}
+
+li img {
+  transform: scale(60%);
+}
+
+.toggle-forecast,
+.toggle-forecast-hide {
+  transition: transform 1s ease;
+}
+
+.toggle-forecast {
+  transform: translateY(10dv);
+}
+
+.toggle-forecast-hide {
+  transform: translateY(100dvh);
+}
+
+.toggle-forecast-show {
+  transform: translateY(0dvh);
 }
