--- a/style/style.css
+++ b/style/style.css
@@ -69,22 +69,27 @@ h2 {
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: .75rem;
   font-weight: 100;
   margin: 0;
 }
 
 nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   box-sizing: border-box;
   width: 100dvw;
   align-items: center;
+
 }
 
 .search-container {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   padding: 1rem 0.5rem 0rem 0.5rem;
-  align-self: center;
+  align-content: center;
   gap: 0.5rem;
   transition: transform 0.3s ease;
   width: min-content;
@@ -133,7 +138,12 @@ nav {
   display: flex;
   flex-direction: column;
   row-gap: 0.5em;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
+  margin-top: 10dvh;
+}
+
+.sun-posititon {
+  row-gap: .75rem;
 }
 
 .forecast {
@@ -142,10 +152,8 @@ nav {
   flex-direction: column;
   width: 100%;
   flex: 1;
-  position: relative;
   box-sizing: border-box;
   max-width: 475px;
-
 }
 
 .daily-forecast {
@@ -155,7 +163,7 @@ nav {
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  justify-self: center;
+
   height: 50dvh;
   width: 50dvw;
 }
@@ -168,9 +176,9 @@ nav {
 }
 
 #forecast-icon>img {
-
   object-fit: contain;
   background: none;
+  transform: scale(125%);
 }
 
 
@@ -178,7 +186,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   color: var(--septenary-color);
   background-color: var(--primary-color);
   height: 50dvh;
@@ -186,11 +194,20 @@ nav {
   text-decoration: none;
   box-sizing: border-box;
   padding: 1rem;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+}
+
+.weather-temp {
+  display: inline-flex;
+  align-items: center;
+  height: fit-content;
 }
 
 ul {
   width: 100%;
   height: 100%;
+  padding-top: 2rem;
   padding: 0;
   margin: 0;
   row-gap: 2rem;
@@ -199,15 +216,18 @@ ul {
 li {
   display: flex;
   flex-direction: row;
+  align-content: center;
+  align-items: center;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   flex-grow: 1;
-  height: 25%;
+  height: 20%;
+  font-weight: 100;
 }
 
 li img {
-  transform: scale(60%);
+  transform: scale(40%);
 }
 
 .toggle-forecast,
