--- a/style/class-compact.css
+++ b/style/class-compact.css
@@ -4,13 +4,11 @@
   flex-direction: column;
   width: 100%;
   flex: 1;
-  justify-content: start;
   box-sizing: border-box;
   max-width: 475px;
   height: 50dvh;
-
-  transform: scale(75%);
-  align-content: start;
+  transform: scale(0.80)translateY(-2.5rem);
+  margin: 0 auto;
 }
 
 .compact-sun {
