--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@
   /* */
   --primary-font: "Roboto", sans-serif;
   --secondary-font: "Open Sans", sans-serif;
+  overflow: hidden;
 }
 
 body {
@@ -66,6 +67,15 @@ sup {
   font-size: 2rem;
 }
 
+.desktop {
+  display: flex;
+  flex-direction: column;
+
+  align-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 nav {
   display: flex;
   flex-direction: column;
@@ -79,18 +89,17 @@ nav {
 .search-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 1rem 0.5rem 0rem 0.5rem;
-  align-content: center;
+  align-items: center;
   gap: 0.5rem;
   transition: transform 0.3s ease;
   width: min-content;
   max-width: 475px;
+
 }
 
-.search-container.active {
-  transform: translateY(0);
-}
+
 
 #city-input {
   flex: 1;
@@ -98,8 +107,8 @@ nav {
   border: none;
   outline: none;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.2);
-  color: var(--text-color);
+  background: rgba(255, 255, 255, 0.4);
+  color: rgba(34, 35, 80, 0.6);
   font-size: .75rem;
   font-family: var(--primary-font);
   width: 65dvw;
@@ -107,20 +116,20 @@ nav {
 }
 
 #city-input::placeholder {
-  color: rgba(98, 100, 162, 0.7);
+  color: rgba(98, 100, 162, 0.5);
 }
 
 #search-btn {
   padding: 0.5rem 0.5rem;
   border: none;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.4);
   color: var(--text-color);
   cursor: pointer;
   transition: background 0.2s ease;
   font-family: var(--primary-font);
   font-size: .75rem;
-  color: rgba(98, 100, 162, 0.7);
+  color: rgba(34, 35, 80, 0.4);
 }
 
 #search-btn:hover {
@@ -143,7 +152,7 @@ nav {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80dvw;
   flex: 1;
   box-sizing: border-box;
   max-width: 475px;
@@ -170,7 +179,9 @@ nav {
 #forecast-icon>img {
   object-fit: contain;
   background: none;
-  transform: scale(125%);
+  height: 7rem;
+  width: auto;
+
 
 }
 
@@ -196,6 +207,13 @@ nav {
   display: inline-flex;
   align-items: center;
   height: fit-content;
+  column-gap: .5rem;
+}
+
+.weather-temp img {
+  height: 25px;
+  width: auto;
+
 }
 
 ul {
@@ -220,9 +238,7 @@ li {
   font-weight: 100;
 }
 
-li img {
-  transform: scale(40%);
-}
+
 
 .toggle-forecast,
 .toggle-forecast-hide {
@@ -239,15 +255,4 @@ li img {
 
 .toggle-forecast-show {
   transform: translateY(0dvh);
-}
-
-@media (min-width: 475px) {
-  .desktop {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    width: 100%;
-  }
 }
