--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,6 @@ body {
   background-attachment: fixed;
   color: var(--primary-color);
   margin: 0;
-
 }
 
 .night {
@@ -83,7 +82,6 @@ nav {
   box-sizing: border-box;
   width: 100dvw;
   align-items: center;
-
 }
 
 .search-container {
@@ -96,10 +94,7 @@ nav {
   transition: transform 0.3s ease;
   width: min-content;
   max-width: 475px;
-
 }
-
-
 
 #city-input {
   flex: 1;
@@ -181,10 +176,7 @@ nav {
   background: none;
   height: 7rem;
   width: auto;
-
-
 }
-
 
 #weekly-forecast {
   display: flex;
@@ -213,7 +205,6 @@ nav {
 .weather-temp img {
   height: 25px;
   width: auto;
-
 }
 
 ul {
@@ -238,8 +229,6 @@ li {
   font-weight: 100;
 }
 
-
-
 .toggle-forecast,
 .toggle-forecast-hide {
   transition: transform .7s ease;
@@ -255,4 +244,52 @@ li {
 
 .toggle-forecast-show {
   transform: translateY(0dvh);
+}
+
+.compact {
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex: 1;
+  box-sizing: border-box;
+  max-width: 475px;
+  height: 50dvh;
+  transform: scale(0.80)translateY(-2.5rem);
+  margin: 0 auto;
+}
+
+.compact-sun {
+  display: flex;
+  flex-direction: row;
+  column-gap: 2rem;
+  margin-top: none;
+}
+
+.sunrise {
+  display: inline;
+}
+
+#toggle-btn {
+  position: absolute;
+  right: 10%;
+  bottom: 5dvh;
+  aspect-ratio: 1 - 1;
+  height: 50px;
+  width: 50px;
+  border-radius: 100px;
+  background-color: rgb(98, 100, 162);
+  font-size: 1.2rem;
+  color: white;
+  border: none;
+  z-index: 2;
+}
+
+#toggle-btn:hover {
+  background-color: rgb(98, 100, 162);
+  transform: scale(1.05);
+}
+
+.btn-shift {
+  top: 50dvh;
 }
