--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,6 @@ nav {
   transition: transform 0.3s ease;
   width: min-content;
   max-width: 475px;
-
 }
 
 
@@ -255,4 +254,32 @@ li {
 
 .toggle-forecast-show {
   transform: translateY(0dvh);
+}
+
+/* slow loading */ 
+.loader {
+  border: 8px solid rgba(255, 255, 255, 0.3);
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
+  border-left: 16px solid pink;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 3s linear infinite;
+  margin: auto;
+  display: none; /* Hide loader by default */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* Show loader when loading class is added */
+.loading .loader {
+  display: block;
 }
